# gdslib

./: .bumpversion.cfg  .env-example  .gitignore  .pre-commit-config.yaml  README.md  api.py  manage.py  pyproject.toml
gdslib/: __init__.py
infra/: Makefile  README.md  id.py  main.tf  s3.tf
